<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background_dark"
    android:orientation="vertical">
    <View
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_actionbar_background_view_height"
        android:background="@color/guillotine_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:contentInsetStart="0dp"
            style="@style/Toolbar">

            <ImageView
                android:id="@+id/content_hamburger" android:layout_marginLeft="20dp"
                style="@style/ImageView.Hamburger" android:layout_width="30dp" android:layout_height="30dp"
                android:src="@drawable/ic_menu_90" />

            <com.yalantis.guillotine.sample.widget.CanaroTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity"
                android:textSize="12dp" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/profile_group"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginTop="@dimen/guillotine_medium_margin">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_profile"
                android:layout_width="16dp"
                android:layout_height="16dp" />

            <com.yalantis.guillotine.sample.widget.CanaroTextView
                android:id="@+id/register"
                style="@style/TextView.GuillotineItem"
                android:text="@string/register"
                android:clickable="true"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feed_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_feed"
                android:layout_width="16dp"
                android:layout_height="16dp" />

            <com.yalantis.guillotine.sample.widget.CanaroTextView
                android:id="@+id/about"
                style="@style/TextView.GuillotineItem"
                android:clickable="true"
                android:text="@string/about"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_activity_active"
                android:layout_width="16dp"
                android:layout_height="16dp" />

            <com.yalantis.guillotine.sample.widget.CanaroTextView
                android:id="@+id/search"
                style="@style/TextView.GuillotineItem.Selected"
                android:clickable="true"
                android:text="@string/search"
                android:textSize="12dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/guillotine_divider_height" />

        <LinearLayout
            android:id="@+id/settings_group"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                style="@style/ImageView.GuillotineItem"
                android:src="@drawable/ic_settings"
                android:layout_width="16dp"
                android:layout_height="16dp" />

            <com.yalantis.guillotine.sample.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/settings"
                android:textSize="12dp" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>